complete work on generalizing the statistical ngram model and running experiments

--- a/makemore/src/notebooks/bigram_stat.ipynb
+++ b/makemore/src/notebooks/bigram_stat.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "\n",
     "words = load_names(data_dir / \"names.txt\")\n",
-    "print(words[:4])"
+    "words[:4]"
    ]
   },
   {
