--- a/micrograd/src/notebooks/demo.ipynb
+++ b/micrograd/src/notebooks/demo.ipynb
@@ -10,6 +10,7 @@
     "import random\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "%matplotlib inline"
    ]
   },
@@ -51,13 +52,14 @@
    "outputs": [],
    "source": [
     "from sklearn.datasets import make_moons\n",
+    "\n",
     "X, y = make_moons(n_samples=128, noise=0.1)\n",
     "# make y be -1 or 1\n",
-    "y = y*2 - 1 \n",
+    "y = y * 2 - 1\n",
     "\n",
     "# visualize in 2D\n",
-    "plt.figure(figsize=(5,5))\n",
-    "plt.scatter(X[:,0], X[:,1], c=y, s=20, cmap='jet')"
+    "plt.figure(figsize=(5, 5))\n",
+    "plt.scatter(X[:, 0], X[:, 1], c=y, s=20, cmap=\"jet\")"
    ]
   },
   {
@@ -75,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# initialize a model \n",
+    "# initialize a model\n",
     "model = MLP(2, [16, 16, 1])\n",
     "print(f\"number of parameters = {len(model.parameters())}\")"
    ]
@@ -96,25 +98,26 @@
     "        ri = np.random.permutation(X.shape[0])[:batch_size]\n",
     "        Xb, yb = X[ri], y[ri]\n",
     "    inputs = [list(map(Value, xrow)) for xrow in Xb]\n",
-    "    \n",
+    "\n",
     "    # forward the model to get scores\n",
     "    scores = list(map(model, inputs))\n",
-    "    \n",
+    "\n",
     "    # SVM \"max-margin\" loss (tanh instead of relu)\n",
-    "    losses = [(1 + -yi*scorei).tanh() for yi, scorei in zip(yb, scores)]\n",
+    "    losses = [(1 + -yi * scorei).tanh() for yi, scorei in zip(yb, scores)]\n",
     "    data_loss = sum(losses) * (1.0 / len(losses))\n",
-    "    \n",
+    "\n",
     "    # L2 regularization\n",
     "    alpha = 1e-4\n",
-    "    reg_loss = alpha * sum((p*p for p in model.parameters()))\n",
-    "    \n",
+    "    reg_loss = alpha * sum((p * p for p in model.parameters()))\n",
+    "\n",
     "    # total loss\n",
     "    total_loss = data_loss + reg_loss\n",
     "    assert isinstance(total_loss, Value)\n",
-    "    \n",
+    "\n",
     "    # also get accuracy\n",
     "    accuracy = [(yi > 0) == (scorei.data > 0) for yi, scorei in zip(yb, scores)]\n",
     "    return total_loss, sum(accuracy) / len(accuracy)\n",
+    "\n",
     "\n",
     "total_loss, acc = loss()\n",
     "print(f\"total loss = {total_loss.data}, accuracy = {acc}\")"
@@ -141,16 +144,16 @@
     "for k in range(N_EPOCHS):\n",
     "    # forward\n",
     "    total_loss, acc = loss()\n",
-    "    \n",
+    "\n",
     "    # backward\n",
     "    model.zero_grad()\n",
     "    total_loss.backward()\n",
-    "    \n",
+    "\n",
     "    # update (sgd) with learning rate decay\n",
-    "    learning_rate = 1.0 - 0.9*k/100\n",
+    "    learning_rate = 1.0 - 0.9 * k / 100\n",
     "    for p in model.parameters():\n",
     "        p.data -= learning_rate * p.grad\n",
-    "    \n",
+    "\n",
     "    if k % 2 == 0:\n",
     "        print(f\"step {k} loss {total_loss.data}, accuracy {acc*100}%\")"
    ]
@@ -184,8 +187,7 @@
     "h = 0.25\n",
     "x_min, x_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "y_min, y_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
-    "xx, yy = np.meshgrid(np.arange(x_min, x_max, h),\n",
-    "                     np.arange(y_min, y_max, h))\n",
+    "xx, yy = np.meshgrid(np.arange(x_min, x_max, h), np.arange(y_min, y_max, h))\n",
     "Xmesh = np.c_[xx.ravel(), yy.ravel()]\n",
     "inputs = [list(map(Value, xrow)) for xrow in Xmesh]\n",
     "scores = list(map(model, inputs))\n",
