complete work on micrograd for post

--- a/micrograd/src/notebooks/demo.ipynb
+++ b/micrograd/src/notebooks/demo.ipynb
@@ -102,8 +102,8 @@
     "    # forward the model to get scores\n",
     "    scores = list(map(model, inputs))\n",
     "\n",
-    "    # SVM \"max-margin\" loss (tanh instead of relu)\n",
-    "    losses = [(1 + -yi * scorei).tanh() for yi, scorei in zip(yb, scores)]\n",
+    "    # SVM \"max-margin\" loss\n",
+    "    losses = [(1 + -yi * scorei).relu() for yi, scorei in zip(yb, scores)]\n",
     "    data_loss = sum(losses) * (1.0 / len(losses))\n",
     "\n",
     "    # L2 regularization\n",
