--- a/makemore/src/notebooks/bigram_stat.ipynb
+++ b/makemore/src/notebooks/bigram_stat.ipynb
@@ -243,6 +243,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ab16e306",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import math\n",
+    "\n",
+    "x = np.linspace(0.1, 100)\n",
+    "y = np.array([math.log(v) for v in x])\n",
+    "\n",
+    "plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a19cf756",
    "metadata": {},
    "outputs": [],
